# random_axum_tutorials

./: Cargo.toml
blog-rs/: Cargo.toml
blog-rs/src/: main.rs
blog-rs/src/assets/: post.css
blog-rs/templates/: base.html  index.html  posts.html
chone/: Cargo.toml
chone/src/: error.rs  log.rs  main.rs  model.rs
chone/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
chone/tests/: quick_dev.rs
generate-random-number/src/: main.rs
include-html/: Cargo.toml
include-html/src/: main.rs
jph/: Cargo.toml
jph/src/: book.rs  data.rs  main.rs
