[package]
name = "chone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.16"
lazy-regex = "2.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "2.3.2"
strum_macros = "0.24.3"
tokio = { version = "1.27.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.70"
httpc-test = "0.1.1"
